update: project rework files

--- a/index.html
+++ b/index.html
@@ -46,22 +46,17 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li>
-                    <a href="">
+                    <a href="dogs.html">
                         Cachorros
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="cats.html">
                         Gatos
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        Outros Pets
-                    </a>
-                </li>
-                <li>
-                    <a href="">
+                    <a href="our-services.html">
                         Nossos serviços
                     </a>
                 </li>
@@ -88,30 +83,30 @@
                     Destaques para seu doguinho
                 </h3>
                 <div>
-                    <div>
-                        <img src="./assets/pots.svg" alt="">
-                        <p>
-                            Acessórios para alimentação
-                        </p>
-                    </div>
-                    <div>
-                        <img src="./assets/food.svg" alt="">
-                        <p>
-                            Rações
-                        </p>
-                    </div>
-                    <div>
-                        <img src="./assets/hygiene.svg" alt="">
-                        <p>
-                            Produtos para higiene
-                        </p>
-                    </div>
-                    <div>
-                        <img src="./assets/medicine.svg" alt="">
-                        <p>
-                            Medicamentos
-                        </p>
-                    </div>
+                    <a href="dogs.html">
+                        <div>
+                            <img src="./assets/pots.svg" alt="">
+                            <p>
+                                Acessórios para alimentação
+                            </p>
+                        </div>
+                    </a>
+                    <a href="dogs.html">
+                        <div>
+                            <img src="./assets/food.svg" alt="">
+                            <p>
+                                Rações
+                            </p>
+                        </div>
+                    </a>
+                    <a href="dogs.html">
+                        <div>
+                            <img src="./assets/hygiene.svg" alt="">
+                            <p>
+                                Produtos para higiene
+                            </p>
+                        </div>
+                    </a>
                 </div>
                 <img src="./assets/dogs.svg" alt="">
             </section>
@@ -121,30 +116,30 @@
                     Destaques para seu gatinho
                 </h3>
                 <div>
-                    <div>
-                        <img src="./assets/pots.svg" alt="">
-                        <p>
-                            Acessórios para alimentação
-                        </p>
-                    </div>
-                    <div>
-                        <img src="./assets/food.svg" alt="">
-                        <p>
-                            Rações
-                        </p>
-                    </div>
-                    <div>
-                        <img src="./assets/hygiene.svg" alt="">
-                        <p>
-                            Produtos para higiene
-                        </p>
-                    </div>
-                    <div>
-                        <img src="./assets/medicine.svg" alt="">
-                        <p>
-                            Medicamentos
-                        </p>
-                    </div>
+                    <a href="cats.html">
+                        <div>
+                            <img src="./assets/pots.svg" alt="">
+                            <p>
+                                Acessórios para alimentação
+                            </p>
+                        </div>
+                    </a>
+                    <a href="cats.html">
+                        <div>
+                            <img src="./assets/food.svg" alt="">
+                            <p>
+                                Rações
+                            </p>
+                        </div>
+                    </a>
+                    <a href="cats.html">
+                        <div>
+                            <img src="./assets/hygiene.svg" alt="">
+                            <p>
+                                Produtos para higiene
+                            </p>
+                        </div>
+                    </a>
                 </div>
                 <img src="./assets/cats.svg" alt="">
             </section>
@@ -158,10 +153,10 @@
                         PetsHouse
                     </span>
                 </a>
-                <a href="#">
+                <a href="https://policies.google.com/privacy?hl=pt_BR" target="_blank">
                     Políticas de privacidade
                 </a>
-                <a href="#">
+                <a href="https://policies.google.com/terms?hl=pt_BR" target="_blank">
                     Temos de uso de cookies
                 </a>
                 <div class="info">
