--- a/our-services.html
+++ b/our-services.html
@@ -46,18 +46,13 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li>
-                    <a href="">
+                    <a href="dogs.html">
                         Cachorros
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="cats.html">
                         Gatos
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        Outros Pets
                     </a>
                 </li>
                 <li>
