--- a/our-services.html
+++ b/our-services.html
@@ -18,7 +18,7 @@
     <body>
         <!-- Cabeçalho da página -->
         <header class="header">
-            <a class="box-logo" href="/index.html">
+            <a class="box-logo" href="index.html">
                 <img src="./assets/logo.svg" alt="Logo Pet.shop">
                 <span>
                     PetsHouse
