update: project rework files

--- a/conclusion.html
+++ b/conclusion.html
@@ -20,7 +20,7 @@
     <body>
         <!-- Cabeçalho da página -->
         <header class="header">
-            <a class="box-logo" href="/index.html">
+            <a class="box-logo" href="index.html">
                 <img src="./assets/logo.svg" alt="Logo Pet.shop">
                 <span>
                     PetsHouse
